.provarCaches/00D5f000005vwGkEAI/objects/rstk__socttch__c.object
<CustomObject>
    <description>socttch__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__socttch_socttc__r.rstk__externalid__c + &apos;_&apos; + TEXT(rstk__socttch_rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__socttch_socttc__r.Name + &apos;-&apos; + TEXT(rstk__socttch_rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socttch_clause__c</fullName>
        <label>Clause Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__socttch_comment__c</fullName>
        <label>Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socttch_cttrev__c</fullName>
        <label>CTT Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socttch_date__c</fullName>
        <label>Date of Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socttch_rev__c</fullName>
        <label>Clause Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socttch_socttc__c</fullName>
        <label>CTT Clause</label>
        <referenceTo>rstk__socttc__c</referenceTo>
        <relationshipName>socttchs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Terms Template Clause History</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Terms Clause Change History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Terms Template Clause History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>